Bug 69110 - CSS grammar doesn't support functions with no parameters
Summary: CSS grammar doesn't support functions with no parameters
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Marrin
URL:
Keywords: InRadar
Depends on:
Blocks: 68469
  Show dependency treegraph
 
Reported: 2011-09-29 16:16 PDT by Dean Jackson
Modified: 2011-10-28 15:55 PDT (History)
5 users (show)

See Also:


Attachments
Patch (18.74 KB, patch)
2011-10-28 09:35 PDT, Chris Marrin
no flags Details | Formatted Diff | Diff
Patch (31.96 KB, patch)
2011-10-28 13:24 PDT, Chris Marrin
dino: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dean Jackson 2011-09-29 16:16:15 PDT
Something of the form 'function()' doesn't parse with the current CSS rules. It needs one or more parameters.

A zero parameter function is allowed in CSS and used in CSS_FILTERS.
Comment 1 Radar WebKit Bug Importer 2011-09-29 16:17:00 PDT
<rdar://problem/10211555>
Comment 2 Chris Marrin 2011-10-28 09:35:39 PDT
Created attachment 112876 [details]
Patch
Comment 3 Dean Jackson 2011-10-28 09:41:09 PDT
Comment on attachment 112876 [details]
Patch

Looks good. I have two small questions:

- did you run all the existing LayoutTests? I'm worried this might break existing content (although I can't think of why)
- Why no test for the computedStyle of things like grayscale() ?
Comment 4 Chris Marrin 2011-10-28 13:24:14 PDT
Created attachment 112899 [details]
Patch
Comment 5 Chris Marrin 2011-10-28 15:55:52 PDT
Committed r98773: <http://trac.webkit.org/changeset/98773>