CSS grammar doesn't support functions with no parameters https://bugs.webkit.org/show_bug.cgi?id=69110

Reviewed by Dean Jackson.

Source/WebCore:

Add rule to grammar to accept functions with 0 args and return
this case with a CSSParserValueList with 0 values. Also fixed
filter creation function to properly handle filters with 0
arguments.

* css/CSSGrammar.y:
* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::createFilterOperations):

LayoutTests:

Updated tests to include tests for allowing 0 argument functions and for
disallowing functions with trailing commas (to pickup a couple of theses
cases not in the current tests). Also fixed one typo.

* css3/filters/filter-property-computed-style-expected.txt:
* css3/filters/filter-property-parsing-expected.txt:
* css3/filters/filter-property-parsing-invalid-expected.txt:
* css3/filters/script-tests/filter-property-computed-style.js:
* css3/filters/script-tests/filter-property-parsing-invalid.js:
* css3/filters/script-tests/filter-property-parsing.js:
(testFilterRule):

Canonical link: https://commits.webkit.org/87387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98773 268f45cc-cd09-0410-ab3c-d52691b4dbfc